@@ -1,3 +1,7 @@
+2003-10-31 Bernhard Held <bernhard@bernhardheld.de>
+
+	* src/SDCCmain.c (linkEdit): "fixed" bug #833605
+
 2003-10-31  Borut Razem <borut.razem@siol.net>
 
 	* support\cpp2\cpplex.c: fixed for SDCPP:
